[package]
name = "kindleclip"
version = "0.4.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "CLI tool to export a file per book in kindle 'My Clippings.txt'"
repository = "https://github.com/chrisdavison/kindleclip"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clap = "3.0.0-beta.2"
anyhow = "1.0"
