[package]
name = "kindleclip"
version = "0.8.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "CLI tool to export a file per book in kindle 'My Clippings.txt'"
repository = "https://github.com/chrisdavison/kindleclip"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
structopt = "0.3"
anyhow = "1.0"
